# rellic

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile  Dockerfile.system  README.md  rellicConfig.cmake.in  rt.py
.github/workflows/: anghabench-after-build.yml  anghabench-cron-jobs.yml  anghabench.yml  ci.yml  diff_tests.yml  vcpkg_ci.yml
ci/: angha_1k_test_settings.json
cmake/: git_watcher.cmake  llvm.cmake  options.cmake  packaging.cmake  settings.cmake
cmake/modules/: FindZ3.cmake  Findgflags.cmake  Findglog.cmake  utils.cmake
include/rellic/: Dec2Hex.h  Decompiler.h  Exception.h  Result.h
include/rellic/AST/: ASTBuilder.h  ASTPass.h  ASTPrinter.h  BlockVisitor.h  CondBasedRefine.h  DeadStmtElim.h  DebugInfoCollector.h  DebugInfoVisitor.h  DecompilationContext.h  EGraph.h  ExprCombine.h  FixByVal.h  FunctionLayoutOverride.h  GenerateAST.h  IRToASTVisitor.h  InferenceRule.h  InlineReferences.h  LocalDeclRenamer.h  LoopCondProp.h  LoopRefine.h  MaterializeConds.h  NestedCondProp.h  NestedScopeCombine.h  NormalizeCond.h  ReachBasedRefine.h  StructFieldRenamer.h  StructGenerator.h  SubprogramGenerator.h  TransformVisitor.h  TypeProvider.h  Util.h  VariableProvider.h  Z3CondSimplify.h  Z3ConvVisitor.h  Z3ExprSimplifier.h
include/rellic/AST/Compat/: ASTContext.h  Stmt.h  Type.h
include/rellic/BC/: Util.h  Version.h
include/rellic/BC/Compat/: DerivedTypes.h  Error.h  IRReader.h  IntrinsicInst.h  Type.h  Value.h  Verifier.h
include/rellic/Version/: Version.h
lib/: CMakeLists.txt  Dec2Hex.cpp  Decompiler.cpp  Exception.cpp  Version.cpp.in
lib/AST/: ASTBuilder.cpp  ASTPrinter.cpp  BlockVisitor.cpp  CXXToCDecl.cpp  CondBasedRefine.cpp  DeadStmtElim.cpp  DebugInfoCollector.cpp  DebugInfoVisitor.cpp  ExprCombine.cpp  FixByVal.cpp  FunctionLayoutOverride.cpp  GenerateAST.cpp  IRToASTVisitor.cpp  InferenceRule.cpp  InlineReferences.cpp  LocalDeclRenamer.cpp  LoopCondProp.cpp  LoopRefine.cpp  MaterializeConds.cpp  NestedCondProp.cpp  NestedScopeCombine.cpp  NestedScopeCombiner.cpp  NormalizeCond.cpp  ReachBasedRefine.cpp  StructFieldRenamer.cpp  StructGenerator.cpp  SubprogramGenerator.cpp  TypeProvider.cpp  Util.cpp  VariableProvider.cpp  Z3CondSimplify.cpp  Z3ConvVisitor.cpp  Z3ExprSimplifier.cpp
lib/AST/Compat/: ASTContext.cpp  Mangle.cpp  Stmt.cpp
lib/BC/: TypeInference.cpp  Util.cpp
lib/BC/Compat/: Value.cpp
lib/Version/: CMakeLists.txt  Version.cpp.in
libraries/doctest/: CMakeLists.txt
packaging/: README.md  main.cmake
packaging/cmake/: dispatcher.cmake
rellic/: CMakeLists.txt
rellic/AST/: ASTBuilder.cpp  ASTBuilder.h  CXXToCDecl.cpp  CXXToCDecl.h  CondBasedRefine.cpp  CondBasedRefine.h  DeadStmtElim.cpp  DeadStmtElim.h  ExprCombine.cpp  ExprCombine.h  GenerateAST.cpp  GenerateAST.h  IRToASTVisitor.cpp  IRToASTVisitor.h  InferenceRule.cpp  InferenceRule.h  LoopRefine.cpp  LoopRefine.h  NestedCondProp.cpp  NestedCondProp.h  NestedScopeCombiner.cpp  NestedScopeCombiner.h  ReachBasedRefine.cpp  ReachBasedRefine.h  StmtCombine.cpp  StmtCombine.h  TransformVisitor.h  Util.cpp  Util.h  Z3CondSimplify.cpp  Z3CondSimplify.h  Z3ConvVisitor.cpp  Z3ConvVisitor.h
rellic/AST/Compat/: ASTContext.cpp  ASTContext.h  Expr.cpp  Expr.h  Mangle.cpp  Mangle.h  Stmt.cpp  Stmt.h  Type.h
rellic/BC/: Util.cpp  Util.h  Version.h
rellic/BC/Compat/: Error.h  IRReader.h  IntrinsicInst.h  Value.cpp  Value.h  Verifier.h
rellic/Version/: CMakeLists.txt  Version.cpp.in  Version.h
scripts/: build-and-install.sh  build-and-package.sh  build-preset.sh  build.sh  build_with_vcpkg.sh  decompile.py  docker-decomp-entrypoint.sh  generate_changelog.sh  requirements.txt  roundtrip.py  rt.py  run-on-anghabench.sh  test-angha-1k.sh  test-gcc-torture.sh  test-headergen.py  test-layoutgen.py  travis.sh
scripts/build_gcc_torture_tests/: build_and_compress.sh  compress_bitcode.sh  generate_compile_commands.py
tests/: array_swap.c  bitops.c  branch.c  class.hpp  init_list.c  inttoptr.c  issue_4.c  nested_struct.c  pair.hpp  ret0.c  struct.c  struct_swap.c  trunc.c  vector.hpp  zext.c
tests/tools/decomp/: array_swap.c  assert.c  binops.c  bitmask.c  bitops.c  bool.c  branch.c  byval_struct.c  byval_tail_gep.ll  byval_tail_nogep.ll  cast.c  cmpops.c  conflicting_global.c  conflicting_names.c  diff_outputs.mk  fcmp.c  fizzbuzz.c  fizzbuzz_stateful.c  float.c  func_cond_two_arg.c  func_cond_zero_arg.c  funcptr.c  global_using_function_decl.c  goto_loop.c  inttoptr.c  issue_123_uint128_t.c  issue_126_bool2bv.c  issue_127_uint128_t_lit.c  issue_183_literal_structs.c  issue_325_goto.c  issue_333_inline_asm.c  issue_335_z3_ite.ll  issue_4.c  issue_94_strncmp.c  loop.c  nested_while.c  nullptr.c  reg_test_structure_fields.c  ret0.c  short.c  (+9 more)
tests/tools/decomp/failing/: switch.c
tests/tools/decomp/failing-rebuild/: README.md  chal-1.c  issue_333_inline_asm.c
tests/tools/decomp/regressions/: challengebins_error2.bc  challengebins_error3.bc  challengebins_error4.bc  challengebins_error5.bc  challengebins_error6.bc  challengebins_error7.bc  challengebins_error8.bc
tests/tools/headergen/: alias.cpp  alignment.c  anon_union.c  atomic.c  bigstruct.cpp  bitfield.c  class.hpp  enum_basetype.cpp  fwddecl.cpp  inheritance.cpp  packed_bitfield.c  packed_bitfield_mix.c  pair.hpp  static_member.cpp  templates.hpp  union.c  unordered_map.cpp  vector.cpp  vector_string.cpp
tests/tools/layoutgen/: multiple_bases.cpp  packed.c
tools/: CMakeLists.txt
tools/dec2hex/: dec2hex.cpp
tools/decomp/: Decomp.cpp
tools/headergen/: HeaderGen.cpp  README.md
tools/hpp2h/: HppToH.cpp
tools/layoutgen/: LayoutGen.cpp
tools/plugins/: ida-rellic.py
tools/repl/: Repl.cpp
tools/xref/: AsmWriter.cpp  DeclPrinter.cpp  Printer.h  README.md  StmtPrinter.cpp  TypePrinter.cpp  Xref.cpp
tools/xref/cgi-bin/: decompile.py
tools/xref/www/: index.html  main.js  style.css
unittests/: CMakeLists.txt  UnitTest.cpp
unittests/AST/: ASTBuilder.cpp  StructGenerator.cpp  Util.cpp  Util.h  Z3ConvVisitor.cpp
